--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "date-fns": "^3.6.0",
     "express": "^4.19.2",
     "express-fileupload": "^1.5.0",
