--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=mongodb+srv://eventplify-main-db-06d8d856d90:*****@prod-us-central1-1.lfuy1.mongodb.net/eventplify-main-db-06d8d856d90
+DATABASE_URL=mongodb+srv://eventplify-main-db-06d8d856d90:aEk7TqSEmm7E3DZnjF3rsFFyxwD6jh@prod-us-central1-1.lfuy1.mongodb.net/eventplify-main-db-06d8d856d90
